fix header align

--- a/css/style.css
+++ b/css/style.css
@@ -39,13 +39,13 @@ header {
     top: 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: white;
     z-index: 2;
 }
 
 #logo {
-    margin-left: 5em;
+    margin-left: 3em;
     width: 1.5em;
 }
 
